data/derived/comb/progs/unify/prog5935.ml.out
Characters 350-351:
  | Boring (e1,e2) -> 3*.(eval(e1,x,y)+.4*.eval(e2,x,y))
                      ^
Error: This expression has type int but an expression was expected of type
         float
